# Math-Learning-App-for-Kids

./: README.md  deepseek_response.txt  deployment_status_report.md  final_deployment_guide.md  final_fix_report.md  final_message.md  final_report.md  final_verification_report.md  implementation_summary.md  pr_description.md  user_message.md
math_backend/: .env  Dockerfile  check_database.py  deploy_backend.sh  fix_db.py  fly.toml  implementation_summary.md  init_database.py  init_db.py  init_db_robust.py  list_database_tables.py  prompt_verification_summary.md  pyproject.toml  render.yaml  requirements.txt  simple_test.py  simple_test_port.py  test_answer_evaluation_fix.py  test_beijing_prompt.py  test_bilingual.py  test_bilingual_generation.py  test_character_prompt.py  test_deployed_character_prompt.py  test_direct_replicate.py  test_fix.py  test_prompt_config.py  test_provider.py  test_updated_provider.py  verify_deps.py
math_backend/app/: aitutor.py  database.py  deepseek_client.py  evaluation.py  generator.py  main.py  models.py  problem_generator.py  problems.py  users.py
math_backend/app/config/: prompt_templates.py
math_backend/app/providers/: __init__.py  base_provider.py  deepseek_provider.py  openai_provider.py  provider_factory.py  replicate_provider.py
math_backend/app/routes/: problems.py
math_frontend/: deploy.sh  deploy_frontend.sh  deployment_status_report.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  test_api.html  test_api_endpoints.js  vite.config.js  vite.config.ts
math_frontend/src/: App.tsx  (+2 more)
(+21 files in other folders)
