[tool.poetry]
name = "math-learning-app-backend"
version = "0.1.0"
description = "Backend for Math Learning App for Kids"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.23"
httpx = "^0.25.1"
python-multipart = "^0.0.7"
aiohttp = "^3.11.0"
replicate = "^1.0.4"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
